<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btn_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="141dp"
        android:fontFamily="@font/arbutus_slab"
        android:gravity="center"
        android:text="@string/textView_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="305dp"
        android:layout_height="107dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="69dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login">

        <EditText
            android:id="@+id/editText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/textEdit_userName"
            android:inputType="textPersonName"
            android:text="@string/textEdit_blank" />

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/textEdit_password"
            android:inputType="textPassword"
            android:text="@string/textEdit_blank" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="129dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_submit" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="187dp"
        android:orientation="horizontal"
        android:showDividers="middle|beginning|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TextView
            android:id="@+id/textView_signin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:text="@string/textView_signin"
            android:textSize="15sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_fitbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/fitbit"
            app:backgroundTint="@color/design_default_color_background" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/google"
            app:backgroundTint="@color/design_default_color_background" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>